feat: make duck shooter the final game